Added runtime build check to the CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,6 +77,8 @@ jobs:
         run: cargo build --features runtime-benchmarks
       - name: Normal Build
         run: RUSTFLAGS="-D warnings" cargo build
+      - name: Runtime build
+        run: cargo build -p node-polkadex-runtime
       - name: Check Formatting
         run: cargo fmt --check
       - name: Check Clippy
