--- a/clients/orderbook/Cargo.toml
+++ b/clients/orderbook/Cargo.toml
@@ -60,3 +60,5 @@ env_logger = "0.10.0"
 mockall = "0.11.1"
 testing_logger = "0.1.1"
 mockall_double = "0.3.0"
+orderbook-rpc = {path="rpc"}
+sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
