--- a/clients/thea/Cargo.toml
+++ b/clients/thea/Cargo.toml
@@ -54,3 +54,4 @@ substrate-test-runtime-client = {git = "https://github.com/paritytech/substrate"
 mockall = "0.11.1"
 testing_logger = "0.1.1"
 mockall_double = "0.3.0"
+serial_test = "2.0.0"
