Solo chain added

--- a/Dockerfile-solo-chain
+++ b/Dockerfile-solo-chain
@@ -5,8 +5,13 @@ ARG branch=mainnet-release
 RUN apt-get update && apt-get install -y git clang curl libssl-dev protobuf-compiler make build-essential
 RUN curl https://sh.rustup.rs -sSf  | sh -s -- -y
 ENV PATH=/root/.cargo/bin:$PATH
-RUN rustup toolchain install nightly
+RUN rustup default stable &&  rustup update
+RUN rustup show && rustup +nightly show
 
+
+
+RUN rustup update nightly
+RUN rustup target add wasm32-unknown-unknown --toolchain nightly
 COPY . .
 
 
