--- a/Dockerfile-solo-chain
+++ b/Dockerfile-solo-chain
@@ -12,7 +12,7 @@ RUN rustup show && rustup +nightly show
 
 
 #RUN rustup update nightly
-RUN rustup target add wasm32-unknown-unknown --toolchain nightly
+RUN rustup target add wasm32-unknown-unknown --toolchain nightly-2023-01-24
 COPY . .
 
 
