Solo chain added

--- a/Dockerfile-solo-chain
+++ b/Dockerfile-solo-chain
@@ -7,12 +7,14 @@ RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
 ENV PATH=/root/.cargo/bin:$PATH
 RUN rustup install 1.66.1 
 RUN rustup install nightly-2023-01-24
-RUN rustup show && rustup +nightly show
 
 
 
 #RUN rustup update nightly
 RUN rustup target add wasm32-unknown-unknown --toolchain nightly-2023-01-24
+RUN rustup default 1.66.1
+RUN rustup show && rustup +nightly show
+
 COPY . .
 
 
