--- a/Dockerfile-solo-chain
+++ b/Dockerfile-solo-chain
@@ -5,9 +5,11 @@ ARG branch=mainnet-release
 RUN apt-get update && apt-get install --assume-yes git curl build-essential cmake clang jq
 RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y && \
   export PATH="$PATH:$HOME/.cargo/bin" && \
+  source "$HOME/.cargo/env" && \
   rustup toolchain install nightly && \
   rustup target add wasm32-unknown-unknown --toolchain nightly && \
-  rustup default nightly && rustup show && rustup +nightly show
+  rustup default nightly && rustup show && rustup +nightly show &&
+  
 
 COPY . .
 
