--- a/Dockerfile-solo-chain
+++ b/Dockerfile-solo-chain
@@ -8,7 +8,7 @@ RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y && \
   source "$HOME/.cargo/env" && \
   rustup toolchain install nightly && \
   rustup target add wasm32-unknown-unknown --toolchain nightly && \
-  rustup default nightly && rustup show && rustup +nightly show &&
+  rustup default nightly && rustup show && rustup +nightly show 
   
 
 COPY . .
