--- a/primitives/thea/Cargo.toml
+++ b/primitives/thea/Cargo.toml
@@ -17,6 +17,7 @@ sp-core = { workspace = true, default-features = false }
 xcm = { workspace = true, default-features = false }
 bls-primitives = {workspace= true, default-features = false}
 polkadex-primitives = {workspace = true, default-features = false}
+hex = { version = "0.4", default-features = false }
 
 [features]
 default = ["std"]
@@ -33,5 +34,6 @@ std = [
     "sp-std/std",
     "xcm/std",
     "sp-runtime/std",
-    "polkadex-primitives/std"
+    "polkadex-primitives/std",
+    "hex/std"
 ]
