--- a/clients/thea/Cargo.toml
+++ b/clients/thea/Cargo.toml
@@ -57,3 +57,4 @@ mockall_double = "0.3.0"
 serial_test = "2.0.0"
 sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
 sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
+tempfile = "3.5.0"
