--- a/primitives/bls-primitives/Cargo.toml
+++ b/primitives/bls-primitives/Cargo.toml
@@ -19,9 +19,22 @@ parity-scale-codec = { workspace = true, default-features = false, features = ["
 scale-info = { workspace = true, default-features = false, features = ["derive"] }
 hex = { version = "0.4.3", optional = true }
 
+
+# Ark works
+ark-bls12-381 = {version="0.4.0", default-features = false, features = ["curve"]}
+ark-ec = {version="0.4.2", default-features = false}
+ark-ff = {version="0.4.2", default-features = false}
+ark-serialize = {version="0.4.2", default-features = false}
+sha2 = {version="0.10.6", default-features = false}
+
 [features]
 default = ["std"]
 std = [
+    "sha2/std",
+    "ark-bls12-381/std",
+    "ark-ec/std",
+    "ark-ff/std",
+    "ark-serialize/std",
     "log",
     "hex",
     "serde_json",
