--- a/primitives/orderbook/Cargo.toml
+++ b/primitives/orderbook/Cargo.toml
@@ -15,6 +15,7 @@ sp-application-crypto = { workspace = true }
 sp-core = { workspace = true }
 sp-runtime = { workspace = true }
 sp-std = { workspace = true }
+log = {workspace = true, default-features = false}
 polkadex-primitives = { workspace = true }
 chrono = { version = "0.4.23", optional = true }
 rand = { version = "0.8.5", optional = true }
@@ -49,4 +50,5 @@ std = [
     "sp-core/std",
     "sp-runtime/std",
     "sp-std/std",
+    "log/std"
 ]
