--- a/misc/load-testing/Cargo.toml
+++ b/misc/load-testing/Cargo.toml
@@ -13,3 +13,4 @@ polkadex-primitives = { path = "../../primitives/polkadex" }
 sp-core = {workspace = true}
 sp-keyring = {workspace = true}
 serde_json = "1.0.96"
+anyhow = "*"
