Revert "temp(ci): Disable CI cache to test build"
This reverts commit 47b8ebb159291e7c75f9d4a9fe32c05b7df259e1.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,14 +60,14 @@ jobs:
           components: rustfmt, clippy
       - name: Checkout to the current branch
         uses: actions/checkout@v3
-#      - name: Cache Rust Dependencies
-#        uses: actions/cache@v3
-#        with:
-#          path: |
-#            ~/.cargo/registry
-#            ~/.cargo/git
-#            target
-#          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+      - name: Cache Rust Dependecies
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.cargo/registry
+            ~/.cargo/git
+            target
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
       - name: Check versions info
         run: |
           rustup -V
