--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,7 +60,7 @@ jobs:
           components: rustfmt, clippy
       - name: Checkout to the current branch
         uses: actions/checkout@v3
-      - name: Cache Rust Dependecies
+      - name: Cache Rust Dependencies
         uses: actions/cache@v3
         with:
           path: |
